exports[`mcfunction argument parser > minecraft:swizzle > Parse 'x' 1`] = `
{
  "node": {
    "type": "literal",
    "range": {
      "start": 0,
      "end": 1
    },
    "value": "x"
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:swizzle > Parse 'xyz' 1`] = `
{
  "node": {
    "type": "literal",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": "xyz"
  },
  "errors": []
}
`;
